# robit-ros2-homework

HW1/myteleop/: CMakeLists.txt
HW1/myteleop/src/: myteleop.cpp
HW2/: README.md
HW2/my_publisher_pkg/: CMakeLists.txt  package.xml
HW2/my_publisher_pkg/src/: publisher.cpp
HW2/my_subscibe_pkg/: CMakeLists.txt  package.xml
HW2/my_subscibe_pkg/src/: subscriber.cpp
HW2/tutorial_interface/: CMakeLists.txt
HW3/: README.md
HW3/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW3/install/turtle_interface/include/turtle_interface/turtle_interface/msg/detail/: num__rosidl_typesupport_fastrtps_cpp.hpp  num__rosidl_typesupport_introspection_c.h  num__struct.hpp  num__type_support.cpp
HW3/install/turtle_interface/local/lib/python3.10/dist-packages/turtle_interface/: _turtle_interface_s.ep.rosidl_typesupport_introspection_c.c
HW3/install/turtle_interface/local/lib/python3.10/dist-packages/turtle_interface-0.0.0-py3.10.egg-info/: SOURCES.txt
HW3/install/turtle_interface/local/lib/python3.10/dist-packages/turtle_interface/msg/: __init__.py
HW3/install/turtle_interface/share/turtle_interface/: local_setup.sh  package.dsv  package.sh
HW3/install/turtle_interface/share/turtle_interface/cmake/: export_turtle_interface__rosidl_generator_cExport-noconfig.cmake  export_turtle_interface__rosidl_generator_pyExport-noconfig.cmake  turtle_interfaceConfig.cmake  turtle_interface__rosidl_typesupport_cppExport-noconfig.cmake  turtle_interface__rosidl_typesupport_introspection_cExport.cmake
HW3/install/ui_test/include/ui_test/: mainwindow.h
HW3/install/ui_test/lib/ui_test/: ui_test
HW3/install/ui_test/share/ament_index/resource_index/parent_prefix_path/: ui_test
HW3/install/ui_test/share/ui_test/: package.ps1  package.sh
HW3/log/: latest_build
HW3/turtle_interface/: CMakeLists.txt  package.xml
HW3/turtle_interface/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW3/turtle_interface/install/turtle_interface/include/turtle_interface/turtle_interface/msg/: num.h
HW3/turtle_interface/install/turtle_interface/include/turtle_interface/turtle_interface/msg/detail/: num__builder.hpp  num__rosidl_typesupport_fastrtps_c.h
HW3/turtle_interface/install/turtle_interface/share/turtle_interface/: package.bash  package.ps1  package.sh  package.zsh
HW3/turtle_interface/install/turtle_interface/share/turtle_interface/cmake/: ament_cmake_export_targets-extras.cmake  export_turtle_interface__rosidl_generator_cExport.cmake  export_turtle_interface__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_turtle_interface__rosidl_typesupport_fastrtps_cExport.cmake  export_turtle_interface__rosidl_typesupport_fastrtps_cppExport.cmake
HW3/turtle_interface/log/: latest_build
HW3/ui_test/: CMakeLists.txt
HW3/ui_test/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW3/ui_test/install/hw3_interface/share/hw3_interface/: package.bash  package.zsh
HW3/ui_test/install/ui_test/include/ui_test/: mainwindow.h
HW3/ui_test/install/ui_test/lib/ui_test/: ui_test
HW3/ui_test/install/ui_test/share/ament_index/resource_index/parent_prefix_path/: ui_test
HW3/ui_test/install/ui_test/share/ui_test/: local_setup.sh  package.bash  package.dsv  package.sh  package.zsh
HW3/ui_test/log/: latest_build
HW3/ui_test/resources/: resources.qrc
HW3/ui_test/src/: main.cpp  mainwindow.cpp
HW3/ui_test/ui/: mainwindow.ui
HW4/: README.md
HW4/button/: CMakeLists.txt
HW4/button/include/button/: mainwindow.hpp  qnode.hpp
HW4/button/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW4/button/install/button/lib/button/: button_node
HW4/button/install/button/share/button/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
HW4/button/log/: latest_build
HW4/button/src/: main.cpp  mainwindow.cpp  qnode.cpp
HW4/button/ui/: mainwindow.ui
HW4/moving/: CMakeLists.txt
HW4/moving/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
HW4/moving/install/moving/include/moving/moving/: mainwindow.hpp  qnode.hpp
HW4/moving/install/moving/lib/moving/: moving_node
HW4/moving/install/moving/share/moving/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
HW4/moving/install/moving/share/moving/cmake/: movingConfig.cmake
HW4/moving/log/: latest_build
HW4/moving/src/: main.cpp  mainwindow.cpp  qnode.cpp
HW4/moving/ui/: mainwindow.ui
