<?xml version="1.0"?>
<package format="3">
  <name>my_publisher_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leokim0503@kw.ac.kr">kgh</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rclcpp</build_depend>  <!-- rclcpp 의존성 추가 -->
  <build_depend>tutorial_interface</build_depend>  <!-- tutorial_interface 의존성 추가 -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
